SET( LIB_TESTS_SRCS
    babelWiresTests.cpp
    activateOptionalsModifierDataTest.cpp
    activateOptionalCommandTest.cpp
    addBlankToEnumTest.cpp
    addElementCommandTest.cpp
    addEntryToArrayCommandTest.cpp
    addModifierCommandTest.cpp
    addEntryToMapCommandTest.cpp
    arrayTypeTest.cpp
    changeEntryKindCommandTest.cpp
    changeFileCommandTest.cpp
    commandManagerTest.cpp
    connectionDescriptionTest.cpp
    contentsCacheTest.cpp
    deactivateOptionalCommandTest.cpp
    elementDataTest.cpp
    enumTest.cpp
    enumFeatureTest.cpp
    featureElementConnectionTest.cpp
    featureElementTest.cpp
    featurePathTest.cpp
    editTreeTest.cpp
    intValueTest.cpp
    intTypeTest.cpp
    mapValueTest.cpp
    mapEntryDataTest.cpp
    mapFeatureTest.cpp
    mapHelperTest.cpp
    mapProjectTest.cpp
    modifierDataTest.cpp
    modifierTest.cpp
    moveElementCommandTest.cpp
    parallelProcessorTest.cpp
    pasteElementsCommandTest.cpp
    pathStepTest.cpp
    processorElementTest.cpp
    projectBundleTest.cpp
    projectDataTest.cpp
    projectObserverTest.cpp
    projectSerializationTest.cpp
    projectTest.cpp
    rationalTypeTest.cpp
    rationalValueTest.cpp
    recordTypeTest.cpp
    recordWithVariantsTypeTest.cpp
    removeElementCommandTest.cpp
    removeEntryFromArrayCommandTest.cpp
    removeEntryFromMapCommandTest.cpp
    removeFailedModifiersCommandTest.cpp
    removeSimpleModifierCommandTest.cpp
    removeModifierCommandTest.cpp
    replaceMapEntryCommandTest.cpp
    resizeElementCommandTest.cpp
    selectRecordVariantModifierDataTest.cpp
    selectRecordVariantCommandTest.cpp
    setArraySizeCommandTest.cpp
    setExpandedCommandTest.cpp
    setMapCommandTest.cpp
    setMapSourceTypeCommandTest.cpp
    setMapTargetTypeCommandTest.cpp
    sourceFileNodeTest.cpp
    stringTypeTest.cpp
    stringValueTest.cpp
    sumOfMapsTypeTest.cpp
    sumTypeTest.cpp
    targetFileNodeTest.cpp
    typeRefTest.cpp
    typeSystemTest.cpp
    typeTest.cpp
    valueNamesTest.cpp
    valueHolderTest.cpp
    valueElementTest.cpp
   )

ADD_EXECUTABLE( babelWiresTests ${LIB_TESTS_SRCS} )
TARGET_INCLUDE_DIRECTORIES( babelWiresTests PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/../.. )
TARGET_LINK_LIBRARIES(babelWiresTests Common testUtils BabelWiresLib libTestUtils gtest)
